アカウント登録ページ作成

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
   <div class="inner">
-    <%= link_to "Wrokouter", root_path %>
+    <%= link_to "Workouter", root_path %>
   </div>
   <nav>
     <li><%= link_to "Home", root_path %></li>
