--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,10 @@
 
   <body>
     <%= render 'layouts/header' %>
+    <% flash.each do |message_type, message| %>
+      <%= message_type %>
+      <%= message %>
+    <% end %>
     <%= yield %>
     <%= render 'layouts/footer' %>
   </body>
