--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,12 @@
     <nav>
       <ul>
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "ログイン", login_path %></li>
+        <% if logged_in? %>
+          <li><%= link_to "プロフィール", current_user %></li>
+          <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "ログイン", login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
