--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
         <li><%= link_to "Home", root_path %></li>
         <% if logged_in? %>
           <li><%= link_to "プロフィール", current_user %></li>
+          <li><%= link_to "編集", edit_user_path(current_user) %></li>
           <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
         <% else %>
           <li><%= link_to "ログイン", login_path %></li>
