--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,11 @@
 <h1>ユーザー一覧</h1>
 <ul>
   <% @users.each do |user| %>
-  <li>
-    <%= link_to user.name, user %>
-  </li>
+    <li>
+      <%= link_to user.name, user %>
+      <%= if current_user.admin? && !current_user?(user) %>
+        | <%= link_to "delete", user, method: :delete, data { confirm: "削除してもよろしいですか？" } %>
+      <% end %>
+    </li>
   <% end %>
 </ul>
