--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,8 +4,8 @@
   <% @users.each do |user| %>
     <li>
       <%= link_to user.name, user %>
-      <%= if current_user.admin? && !current_user?(user) %>
-        | <%= link_to "delete", user, method: :delete, data { confirm: "削除してもよろしいですか？" } %>
+      <% if current_user.admin? && !current_user?(user) %>
+        | <%= link_to "delete", user, method: :delete, data: { confirm: "削除してもよろしいですか？" } %>
       <% end %>
     </li>
   <% end %>
