--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,9 @@
-<h1>User#password_reset</h1>
-
+<h1>パスワード再設定</h1>
+<p>パスワードをリセットするには、以下のリンクをクリックしてください</p>
+<%= link_to "Reset password", edit_password_reset_url(@user.reset_token,
+email: @user.email) %>
+<p>このリンクは2時間で期限切れになります。</p>
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
+  パスワードのリセットをリクエストしなかった場合は、このメールは無効になり、
+  <br>パスワードはリセットされません。
 </p>
