--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,6 @@
-User#password_reset
+パスワードをリセットするには、以下のリンクをクリックしてください
+<%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
 
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+このリンクは2時間で期限切れになります。
+パスワードのリセットをリクエストしなかった場合は、このメールは無効になり、
+パスワードはリセットされません。
