--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,2 +1,12 @@
-<h1>PasswordResets#edit</h1>
-<p>Find me in app/views/password_resets/edit.html.erb</p>
+<% provide(:title, 'パスワード再設定') %>
+<h1>パスワード再設定</h1>
+<%= form_with(model: @user, url: password_reset_path(params[:id]),
+local: true) do |f| %>
+  <%= render 'shared/error_messages' %>
+  <%= hidden_field_tag :email, @user.email %>
+  <%= f.label :password %>
+  <%= f.password_field :password %>
+  <%= f.label :password_confirmation, "パスワード確認" %>
+  <%= f.password_field :password_confirmation %>
+  <%= f.submit "更新" %>
+<% end %>
