--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,9 +1,9 @@
 <h1>パスワード再設定</h1>
-<p>パスワードをリセットするには、以下のリンクをクリックしてください</p>
-<%= link_to "Reset password", edit_password_reset_url(@user.reset_token,
+<p>パスワードを再設定するには、以下のリンクをクリックしてください</p>
+<%= link_to "パスワード再設定", edit_password_reset_url(@user.reset_token,
 email: @user.email) %>
 <p>このリンクは2時間で期限切れになります。</p>
 <p>
-  パスワードのリセットをリクエストしなかった場合は、このメールは無効になり、
-  <br>パスワードはリセットされません。
+  パスワードの変更をリクエストしなかった場合は、このメールは無効になり、
+  <br>パスワードは変更されません。
 </p>
