--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,7 +1,7 @@
-<% if @user.errors.any? %>
-  <%= pluralize(@user.errors.count, "error") %>
+<% if object.errors.any? %>
+  <%= pluralize(object.errors.count, "error") %>
   <ul>
-  <% @user.errors.full_messages.each do |msg| %>
+  <% object.errors.full_messages.each do |msg| %>
     <li><%= msg %></li>
   <% end %>
   </ul>
