--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Edit user") %>
 <h1>プロフィール編集</h1>
 <%= form_with(model: @user, local: true) do |f| %>
-<%= render 'shared/error_messages' %>
+<%= render 'shared/error_messages', object: f.object %>
 <%= f.label :name %>
 <%= f.text_field :name %>
 <%= f.label :email %>
