--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,8 +2,8 @@
 <h1>アカウント登録</h1>
 
 <%= form_with(model: @user, local: true) do |f| %>
-  <%= render 'shared/error_messages' %>
-  
+  <%= render 'shared/error_messages', object: f.object %>
+
   <%= f.label :name %>
   <%= f.text_field :name %>
 
