--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -5,17 +5,12 @@
 </div>
 <div>
   <%= render 'shared/stats' %>
-  <% if @users.any? %>
-    <% @users.each do |user| %>
-      <%= link_to user.name, user %>
-    <% end %>
-  <% end %>
 </div>
 <div>
   <h3><%= @title %></h3>
   <% if @users.any? %>
     <ul>
-      <%#= render @users %>
+      <%= render @users %>
     </ul>
   <% end %>
 </div>
