--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,17 +1,35 @@
 <% provide(:title, "チャット") %>
-<ul>
-  <li><%= @user.name %></li>
-</ul>
+<p><%= @user.name %></p>
 
-<% @chats.each do |chat| %>
-  <% if chat.user_id == current_user.id %>
-    <p><%= chat.message %></p>
-  <% else %>
-    <p><%= chat.message %></p>
+<table class="message">
+  <thead>
+    <tr>
+      <th style="text-align: left;"><%= current_user.name %></th>
+      <th style="text-align: right;"><%= @user.name %></th>
+    </tr>
+  </thead>
+  <% @chats.each do |chat| %>
+    <% if chat.user_id == current_user.id %>
+    <tbody>
+      <tr>
+        <th>
+          <p style="text-align: left;"><%= chat.message %></p>
+        </th>
+        <th></th>
+      </tr>
+    <% else %>
+      <tr>
+        <th></th>
+        <th>
+          <p style="text-align: right;"><%= chat.message %></p>
+        </th>
+      </tr>
+    </tbody>
+    <% end %>
   <% end %>
-<% end %>
+</table>
 
-<%= form_with model: @chat, remote: true do|f| %>
+<%= form_with model: @chat, local: false do |f| %>
   <%= f.text_field :message %>
   <%= f.hidden_field :room_id %>
   <%= f.submit "送信する" %>
