logout-btn current_users-page deploy

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,3 +26,7 @@
 <% if current_user != @user %>
   <%= link_to 'チャット', chat_path(@user.id) %>
 <% end %>
+
+<% if current_user? %>
+  <%= link_to "ログアウト", logout_path, method: :delete %>
+<% end %>
