--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,9 @@
-<% if logged_in? %>
-  <%= render 'static_pages/logged_in' %>
-<% else %>
-  <%= render 'static_pages/not_logged_in' %>
-<% end %>
+<div class="home">
+  <div class="home-top">
+    <%= image_tag('home_top') %>
+    <div class="home-message">
+      <h1>メッセージ</h1>
+      <%= link_to '今すぐ登録する', signup_path, class: 'btn-green' %>
+    </div>
+  </div>
+</div>
