--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,21 @@
 <div class="home">
   <div class="home-top">
     <%= image_tag('home_top') %>
-    <div class="home-message">
+    <div class="home-catch-copy">
       <h1>メッセージ</h1>
       <%= link_to '今すぐ登録する', signup_path, class: 'btn-green' %>
     </div>
   </div>
+
+  <section class="home-message">
+    <div class="inner">
+      <div class="home-message__negative">
+        <h4>ジムに通い出したけど続かない・・・</h4>
+        <h4>どんなトレーニングをしていいのかわからない・・・</h4>
+        <h4>トレーニングがマンネリ化してきた・・・</h4>
+      </div>
+      <h1>そんなあなたにピッタリなサービスです！！！</h1>
+      <h4>全国のトレーニーと繋がり、情報交換したり、一緒にトレーニングしてみましょう。</h4>
+    </div>
+  </section>
 </div>
