home-lets design

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -50,4 +50,14 @@
       margin-bottom: 32px;
     }
   }
+
+  &-lets {
+    padding: 16px 0;
+    text-align: center;
+    background-color: $yellow;
+
+    h4 {
+      color: $white;
+    }
+  }
 }
