--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,4 +18,10 @@
       <h4>全国のトレーニーと繋がり、情報交換したり、一緒にトレーニングしてみましょう。</h4>
     </div>
   </section>
+
+  <section class="home-lets">
+    <div class="inner">
+      <h4>さあ、全国のトレーニーと繋がりましょう！</h4>
+    </div>
+  </section>
 </div>
