--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -24,4 +24,8 @@
       <h4>さあ、全国のトレーニーと繋がりましょう！</h4>
     </div>
   </section>
+
+  <section>
+    <%= link_to '今すぐ登録する', signup_path, class: 'btn-green' %>
+  </section>
 </div>
