--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,6 +27,6 @@
   <%= link_to 'チャット', chat_path(@user.id) %>
 <% end %>
 
-<% if current_user? %>
+<% if current_user?(@user) %>
   <%= link_to "ログアウト", logout_path, method: :delete %>
 <% end %>
