--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,20 +1,23 @@
 <% provide(:title, 'アカウント登録') %>
-<h1>アカウント登録</h1>
 
-<%= form_with(model: @user, local: true) do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
+<div class="signup inner">
+  <h1>アカウント登録</h1>
 
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= form_with(model: @user, local: true) do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
 
-  <%= f.label :email %>
-  <%= f.text_field :email %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
 
-  <%= f.label :password %>
-  <%= f.password_field :password %>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
 
-  <%= f.label :password_confirmation, "パスワード確認" %>
-  <%= f.password_field :password_confirmation %>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
 
-  <%= f.submit "登録" %>
-<% end %>
+    <%= f.label :password_confirmation, "パスワード確認" %>
+    <%= f.password_field :password_confirmation %>
+
+    <%= f.submit "登録" %>
+  <% end %>
+</div>
