--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@
 body {
   font-family: 'Noto Sans JP', sans-serif;
   font-weight: 600;
+  color: $black;
   background-color: $white;
 
   letter-spacing: 0.05em;
@@ -99,6 +100,14 @@ p {
     &__reverse {
       @include btn($white, $green, $green)
     }
+  }
+}
+
+article{
+  h1 {
+    padding-left: 16px;
+    margin-bottom: 32px;
+    border-left: solid 6px $green;
   }
 }
 
