--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,6 +17,8 @@
         <%= f.label :man, "男性" %>
         <%= f.radio_button :gender, :woman  %>
         <%= f.label :woman, "女性" %>
+        <%= f.radio_button :gender, :others  %>
+        <%= f.label :others, "その他" %>
       </li>
       <li>
         <%= f.label :address, "住所" %>
