add: design users-item

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,6 +125,14 @@ article{
   }
 }
 
+.man_icon {
+  color: $navy;
+}
+
+.woman_icon {
+  color: $pink;
+}
+
 // header
 .header {
   @extend .flex-box;
