--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,17 @@
 <article class="users inner">
   <h1>ユーザーを探す</h1>
   <h4 class="sub-title">条件設定</h4>
+  <%= search_form_for @q do |f| %>
+    <dl>
+      <dt><%= f.label :address, "居住地" %></dt>
+      <dd><%= f.select :address_eq, User.addresses.keys %></dd>
+    </dl>
+    <dl>
+      <dt><%= f.label :gender, "性別" %></dt>
+      <dd><%= f.select :gender_eq, User.genders.keys %></dd>
+    </dl>
+
+  <% end %>
 
   <ul>
     <% @users.each do |user| %>
