add: add btn-blue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,8 +103,12 @@ article{
     @include btn;
 
     &__reverse {
-      @include btn($white, $green, $green)
+      @include btn($white, $green, $green);
     }
+  }
+
+  &-blue {
+    @include btn($blue, $white, $blue);
   }
 }
 
