add: add search implement

--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -16,7 +16,7 @@
   <% end %>
 
   <ul>
-    <% @users.each do |user| %>
+    <% @searchResults.each do |user| %>
       <%= render user %>
     <% end %>
   </ul>
