--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
       <div class="users-show__details">
         <h4 class="sub-title">基本情報</h4>
         <dl>
-          <dt><p>居住地</p></dt>
+          <dt><p>お住まい</p></dt>
           <dd><%= @user.address %></dd>
         </dl>
         <dl>
