--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,11 +71,16 @@ p {
 }
 
 input,
-select {
+select,
+textarea {
   padding: 6px;
   font-size: 16px;
   border: solid 1px $gray;
   border-radius: 5px;
+}
+
+input[type=file] {
+  border: none;
 }
 
 article{
