--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,16 +1,76 @@
-<% provide(:title, "Edit user") %>
-<h1>プロフィール編集</h1>
-<%= form_with(model: @user, local: true) do |f| %>
-<%= render 'shared/error_messages', object: f.object %>
-<%= f.label :avatar %>
-<%= f.file_field :avatar %>
-<%= f.label :name %>
-<%= f.text_field :name %>
-<%= f.label :email %>
-<%= f.email_field :email %>
-<%= f.label :password %>
-<%= f.password_field :password %>
-<%= f.label :password_confirmation, "パスワード確認" %>
-<%= f.password_field :password_confirmation %>
-<%= f.submit "更新" %>
-<% end %>
+<% provide(:title, "プロフィール編集") %>
+<article class="users-edit inner">
+  <h1>プロフィール編集</h1>
+  <div class="users-edit__img">
+    <% if @user.avatar? %>
+      <%= image_tag @user.avatar.url, style: 'width: 200px;' %>
+    <% else %>
+      <%= image_tag ("sample_user"), style: 'width: 200px;' %>
+    <% end %>
+  </div>
+
+  <%= form_with(model: @user, local: true) do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
+    <dl>
+      <dt><%= f.label :avatar, "プロフィール画像" %></dt>
+      <dd><%= f.file_field :avatar %></dd>
+    </dl>
+    <dl>
+      <dt><%= f.label :name, "ニックネーム" %></dt>
+      <dd><%= f.text_field :name %></dd>
+    </dl>
+    <dl>
+      <dt><%= f.label :gender, "性別" %></dt>
+      <dd>
+        <%= f.radio_button :gender, :man %>
+        <%= f.label :man, "男性" %>
+        <%= f.radio_button :gender, :woman  %>
+        <%= f.label :woman, "女性" %>
+        <%= f.radio_button :gender, :others  %>
+        <%= f.label :others, "その他" %>
+      </dd>
+    </dl>
+    <dl>
+      <dt><%= f.label :address, "お住まい" %></dt>
+      <dd><%= f.select :address, User.addresses.keys, {} %></dd>
+    </dl>
+    <dl>
+      <dt><%= f.label :usedgym, "利用しているジム" %></dt>
+      <dd><%= f.text_field :usedgym %></dd>
+    </dl>
+    <dl>
+      <dt><%= f.label :birthday, "生年月日" %></dt>
+      <dd><%= f.date_select :birthday, { use_month_numbers: true, start_year: 1900 } %></dd>
+    </dl>
+    <dl>
+      <dt><%= f.label :height, "身長" %></dt>
+      <dd><%= f.text_field :height %></dd>
+    </dl>
+    <dl>
+      <dt><%= f.label :weight, "体重" %></dt>
+      <dd><%= f.text_field :weight %></dd>
+    </dl>
+    <dl>
+      <dt><%= f.label :proud, "自慢の部位" %></dt>
+      <dd><%= f.text_field :proud %></dd>
+    </dl>
+    <dl class="users-edit__intro">
+      <dt><%= f.label :introduction, "自己紹介" %></dt>
+      <dd><%= f.text_area :introduction %></dd>
+    </dl>
+    <dl>
+      <dt><%= f.label :email, "メールアドレス" %></dt>
+      <dd><%= f.text_field :email %></dd>
+    </dl>
+    <dl>
+      <dt><%= f.label :password, "パスワード" %></dt>
+      <dd><%= f.password_field :password %></dd>
+    </dl>
+    <dl>
+      <dt><%= f.label :password_confirmation, "パスワード確認" %></dt>
+      <dd><%= f.password_field :password_confirmation %></dd>
+    </dl>
+
+    <%= f.submit "更新", class: 'btn-blue' %>
+  <% end %>
+</article>
